--- a/pharma_deal_django/templates/login.html
+++ b/pharma_deal_django/templates/login.html
@@ -21,7 +21,7 @@
         letter-spacing: -1px;
     }
     a {
-      color: #5469d4;
+      color: #049267;
       text-decoration: unset;
     }
     .login-root {
@@ -73,7 +73,7 @@
         box-shadow: inset 0 0 0 2px #e3e8ee;
     }
     .box-background--blue {
-        background-color: #5469d4;
+        background-color: #049267;
     }
     .box-background--white {
       background-color: #ffffff; 
@@ -164,7 +164,7 @@
     }
 
     input[type="submit"] {
-        background-color: rgb(84, 105, 212);
+        background-color: #049267;
         box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
                     rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
                     rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, 
